@@ -1,10 +1,16 @@
-class TwillAssertionError(Exception):
+class TwillException(Exception):
+    """
+    General twill exception.
+    """
+    pass
+
+class TwillAssertionError(TwillException):
     """
     AssertionError to raise upon failure of some twill command.
     """
     pass
 
-class TwillNameError(Exception):
+class TwillNameError(TwillException):
     """
     Error to raise when an unknown command is called.
     """
